# data_mining

./: .gitignore  PHASE_1B_GUIDE.md  README.md  note.txt  pdf_content.txt
config/: .editorconfig  .gitignore  LICENSE  Makefile  environment.yml  pyproject.toml
dataset/: time_window_comparison.csv
docs/: BT3 - EDA.ipynb  Kịch bản thực nghiệm.docx  Thuyết minh đề tài - Bản cũ.docx  Thuyết minh đề tài - hoàn thành công thức toán.docx  so-sanh-du-lieu-parquet-va-phase1-6.md
examples/code_khanh_linh/: BT3 - Code.ipynb  N03-Lab(1).ipynb  N03-Lab.ipynb  Xử lý dữ liệu.ipynb
examples/colab/: Copy of N03-Lab.ipynb  feature_extraction.py
experiment/: README_RUN_PIPELINE.md  code_tinh.py  command.txt  config.py  feature_extraction.txt  ground_truth_labels.csv  ground_truth_report.csv  phase_1_combine.py  phase_1_data_preparation.py  phase_1_eda.py  phase_1_time_series_feature_extraction.py  phase_1_translate.py  phase_1b_eda.py  phase_2_data_cleaning.py  phase_2_kmeans_label_validation.py  phase_3_data_transformation.py  phase_3_train_valid_test_split.py  phase_4_data_labeling.py  phase_4_supervised_model_training.py  phase_5_data_splitting.py  phase_5_model_evaluation_metrics.py  phase_6_model_interpretability.py  phase_6_model_training.py  phase_7_model_evaluation.py  phase_8_model_interpretability.py  run_experiment_stages.py  run_pipeline.py  runtime_overrides.json  stage_1_generate_ground_truth.py  stage_2_time_window_features.py  stage_3_split_and_smote.py  stage_4_model_training_eval.py  stage_5_explain_model_xai.py  step_2_combine_data_streaming.py  step_5_init_standard_labels_kmeans.py  time_series.md  time_series_mo_ta.md  utils_eda.py
experiment/archive_old_code/: .kaggleignore  1. combine_user_features.py  3. data_prep_and_labeling.py  INDEX.md  README_MODULAR_PIPELINE.md  SUMMARY_FILES_CREATED.md  command.txt  dataset-metadata.json  experiment.rar  experiment_workflow.md  note.txt  phase_1_data_preparation.py  phase_2_data_cleaning.py  phase_3_data_transformation.py  phase_4_data_labeling.py  phase_5_data_splitting.py  (+4 more)
final/: DANH-SACH-SAN-PHAM.md  PROJECT_STATUS.md  README_DO_AN.md  checklist-cong-viec.md
reports/: huong_dan_va_slide_extract.txt  run_output.txt
scripts/: phase_1_time_series_feature_extraction.py  step_1_translate_school_zh_to_en.py  step_3_engagement_report.py  step_4_detailed_report.py
(+14 files in other folders)
